--- a/kokuban20131005/Base.lproj/Main_iPhone.storyboard
+++ b/kokuban20131005/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5053" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -137,7 +137,7 @@
                     </view>
                     <connections>
                         <outlet property="aImageView" destination="6uq-hP-6mg" id="9gH-Sq-dTD"/>
-                        <outlet property="chook1" destination="zqh-W6-MVu" id="5gz-lG-0Rn"/>
+                        <outlet property="chook1" destination="zqh-W6-MVu" id="eGZ-Ct-c4L"/>
                         <outlet property="chook2" destination="PDs-bz-gPk" id="I5l-UI-qcm"/>
                         <outlet property="chook3" destination="h6u-XR-5qG" id="RXy-mr-Ieu"/>
                         <outlet property="chook4" destination="G7x-mZ-SLe" id="pdA-aw-2tA"/>
